--- a/src/main/webapp/css/custom.css
+++ b/src/main/webapp/css/custom.css
@@ -38,3 +38,36 @@ body {
     border-top-left-radius: 0;
     border-top-right-radius: 0;
 }
+
+/* Sticky footer styles
+-------------------------------------------------- */
+html {
+    position: relative;
+    min-height: 100%;
+}
+body {
+    /* Margin bottom by footer height */
+    margin-bottom: 60px;
+}
+.footer {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    background-color: #f5f5f5;
+}
+
+
+/* Custom page CSS
+-------------------------------------------------- */
+/* Not required for template or sticky footer method. */
+
+.container {
+    width: auto;
+    max-width: 700px;
+    padding: 0 15px;
+}
+.container .text-muted {
+    margin: 20px 0;
+}
